# zero-ichi

./: .env.example  .gitignore  LICENSE  README.md  config.json  config.json.example  config.schema.json  dashboard_api.py  install.ps1  install.sh  main.py  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release-pr.yml  sync-dev.yml
ai/: agent.py  config.py  memory.py  skills.py  token_tracker.py
ai/tools/: __init__.py  core.py  group.py
commands/: README.md
commands/admin/: admins.py  members.py  mute.py
commands/content/: clear.py  filter.py  filters.py  notes.py  save.py  sticker.py  stop.py  toimg.py
commands/downloader/: audio.py  cancel.py  common.py  dl.py  video.py
commands/fun/: eightball.py  fact.py  flip.py  joke.py  quote.py  roll.py
commands/general/: help.py  info.py  ping.py  stats.py  uptime.py
commands/group/: goodbye.py  invite.py  lock.py  poll.py  revoke.py  rules.py  setname.py  tagall.py  welcome.py
commands/moderation/: antidelete.py  blacklist.py  resetwarns.py  unblacklist.py  warn.py  warns.py
commands/owner/: addskill.py  config.py  delskill.py  eval.py  leave.py  skills.py
commands/utility/: afk.py  echo.py  lang.py  remind.py  time.py
config/: __init__.py  settings.py
core/: ai_agent.py  analytics.py  cache.py  client.py  command.py  constants.py  downloader.py  env.py  errors.py  event_bus.py  group_actions.py  i18n.py  jid_resolver.py  jsonc.py  logger.py  message.py  middleware.py  moderation.py  pending_store.py  permissions.py  rate_limiter.py  runtime_config.py  scheduler.py  session.py  shared.py  storage.py  symbols.py  targets.py
core/handlers/: afk.py  antidelete.py  antilink.py  blacklist.py  features.py  welcome.py
core/middlewares/: __init__.py  ai.py  command.py  download_reply.py  mute.py  stats.py
dashboard/: .prettierrc  README.md  package.json
docs/: index.md  package.json
docs/.vitepress/: config.mts
docs/commands/: admin.md  content.md  downloader.md  fun.md  general.md  group.md  moderation.md  owner.md  utility.md
docs/development/: architecture.md  contributing.md  custom-commands.md
docs/features/: ai.md  dashboard.md  i18n.md  webhooks.md
docs/getting-started/: configuration.md  first-run.md  installation.md
locales/: en.json  id.json
src/: dashboard_api.py  main.py
src/ai/: __init__.py  agent.py  config.py  context.py  memory.py  skills.py  token_tracker.py
src/config/: settings.py
src/core/: analytics.py  applemusic.py  automations.py  cache.py  client.py  command.py  constants.py  db.py  digest.py  downloader.py  env.py  errors.py  event_bus.py  group_actions.py  i18n.py  logger.py  media.py  message.py  reports.py  (+14 more)
tests/: test_ai_action_policy.py  test_dashboard_security_and_ratelimit.py  test_db_webhooks.py  test_runtime_config_validation.py
(+98 files in other folders)
