[project]
name = "zero-ichi"
version = "0.1.0"
description = "WhatsApp Bot built with 💖"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "neonize>=0.3.14.post0",
    "qrcode>=7.4",
    "rich>=13.0",
    "watchfiles>=1.1.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "apscheduler>=3.10.0",
    "pydantic-ai>=1.48.0",
    "python-dotenv>=1.2.1",
]

[tool.uv]
dev-dependencies = ["ruff>=0.9.0"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".git", ".venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
]

[tool.ruff.lint.isort]
known-first-party = ["core", "commands", "config"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
